# yattmcp

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/yattmcp/: __init__.py  __main__.py  cli.py  client.py  normalizers.py  server.py
tests/: test_client.py  test_normalizers.py  test_server.py
